add_subdirectory(devices)
add_subdirectory(dma)
add_subdirectory(interrupts)
add_subdirectory(ioports)
add_subdirectory(memory)
add_subdirectory(nics)
add_subdirectory(opengl)
add_subdirectory(partitions)
add_subdirectory(pci)
add_subdirectory(pcmcia)
add_subdirectory(processor)
add_subdirectory(protocols)
add_subdirectory(samba)
add_subdirectory(scsi)
add_subdirectory(sound)
add_subdirectory(usb)
add_subdirectory(xserver)
kde4_create_handbook(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en)
